--- a/PublicDataAPI.ipynb
+++ b/PublicDataAPI.ipynb
@@ -6,7 +6,8 @@
       "name": "PublicDataAPI.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOkdOJv585nOZ1r47DCGXbK",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPotJFh0FMSsBXTdUj7v/9g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +32,143 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "SuituCN-xzwr"
+      },
+      "source": [
+        "import os\n",
+        "import sys\n",
+        "import urllib.request\n",
+        "import datetime\n",
+        "import time\n",
+        "import json\n",
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YwK1WV3Ix4PM"
+      },
+      "source": [
+        "ServiceKey=\"Ody77GLuYeR%2FeFqbpduMN2Bi4Cka2fztbgnj6E2Eux1kUhy3e4epR28XKBUaObiqPoVzAizxXMBPXtMyuC9v9Q%3D%3D\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mou3fEDRx5CK"
+      },
+      "source": [
+        "def getRequestUrl(url):    \n",
+        "    req = urllib.request.Request(url)    \n",
+        "    try: \n",
+        "        response = urllib.request.urlopen(req)\n",
+        "        if response.getcode() == 200:\n",
+        "            print (\"[%s] Url Request Success\" % datetime.datetime.now())\n",
+        "            return response.read().decode('utf-8')\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        "        print(\"[%s] Error for URL : %s\" % (datetime.datetime.now(), url))\n",
+        "        return None"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sUIlJZEWx5dl"
+      },
+      "source": [
+        "def getTourismStatsItem(yyyymm, national_code, ed_cd):    \n",
+        "    service_url = \"http://openapi.tour.go.kr/openapi/service/EdrcntTourismStatsService/getEdrcntTourismStatsList\"\n",
+        "    \n",
+        "    parameters = \"?_type=json&serviceKey=\" + ServiceKey   #인증키\n",
+        "    parameters += \"&YM=\" + yyyymm\n",
+        "    parameters += \"&NAT_CD=\" + national_code\n",
+        "    parameters += \"&ED_CD=\" + ed_cd\n",
+        "\n",
+        "    url = service_url + parameters\n",
+        "    \n",
+        "    retData = getRequestUrl(url)   #[CODE 1]\n",
+        "    \n",
+        "    if (retData == None):\n",
+        "        return None\n",
+        "    else:\n",
+        "         return json.loads(retData)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ajOwI-J3x5xn"
+      },
+      "source": [
+        "def getTourismStatsService(nat_cd, ed_cd, nStartYear, nEndYear):\n",
+        "    jsonResult = []\n",
+        "    result = []\n",
+        "    for year in range(nStartYear, nEndYear+1):\n",
+        "        for month in range(1, 13):\n",
+        "            yyyymm = \"{0}{1:0>2}\".format(str(year), str(month))            \n",
+        "            jsonData = getTourismStatsItem(yyyymm, nat_cd, ed_cd) #[CODE 2]        \n",
+        "            if (jsonData['response']['header']['resultMsg'] == 'OK'):               \n",
+        "                # 데이터가 없는 마지막 항목인 경우 ----------------------------\n",
+        "                if jsonData['response']['body']['items'] == '':\n",
+        "                    dataEND = \"{0}{1:0>2}\".format(str(year), str(month-1))\n",
+        "                    print(\"데이터 없음.... \\n 제공되는 통계 데이터는 %s년 %s월까지입니다.\"                          \n",
+        "                          %(str(year), str(month-1)))                    \n",
+        "                    break                \n",
+        "                #jsonData를 출력하여 확인......................................................\n",
+        "                print (json.dumps(jsonData, indent=4, \n",
+        "                         sort_keys=True, ensure_ascii=False))          \n",
+        "                natName = jsonData['response']['body']['items']['item']['natKorNm']\n",
+        "                natName = natName.replace(' ', '')\n",
+        "                num = jsonData['response']['body']['items']['item']['num']\n",
+        "                ed = jsonData['response']['body']['items']['item']['ed']\n",
+        "                print('[ %s_%s : %s ]' %(natName, yyyymm, num))\n",
+        "                print('----------------------------------------------------------------------')                \n",
+        "                jsonResult.append({'nat_name': natName, 'nat_cd': nat_cd,\n",
+        "                                 'yyyymm': yyyymm, 'visit_cnt': num})\n",
+        "                result.append([natName, nat_cd, yyyymm, num])\n",
+        "    return (jsonResult, result, natName, ed, dataEND)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Pw-oY_mvwObX"
       },
       "source": [
-        ""
+        "jsonResult = []\n",
+        "    result = []\n",
+        "\n",
+        "    print(\"<< 국내 입국한 외국인의 통계 데이터를 수집합니다. >>\")\n",
+        "    nat_cd = input('국가 코드를 입력하세요(중국: 112 / 일본: 130 / 미국: 275) : ')\n",
+        "    nStartYear =int(input('데이터를 몇 년부터 수집할까요? : '))\n",
+        "    nEndYear = int(input('데이터를 몇 년까지 수집할까요? : '))\n",
+        "    ed_cd = \"E\"     #E : 방한외래관광객, D : 해외 출국\n",
+        "    \n",
+        "    jsonResult, result, natName, ed, dataEND =getTourismStatsService(nat_cd,\n",
+        "                                            ed_cd, nStartYear, nEndYear) #[CODE 3]\n",
+        " \n",
+        "    #파일저장 1 : json 파일       \n",
+        "    with open('./%s_%s_%d_%s.json' % (natName, ed, nStartYear, dataEND), 'w', \n",
+        "                encoding='utf8') as outfile:\n",
+        "        jsonFile  = json.dumps(jsonResult, indent=4, sort_keys=True, ensure_ascii=False)\n",
+        "        outfile.write(jsonFile)\n",
+        "    #파일저장 2 : csv 파일   \n",
+        "    columns = [\"입국자국가\", \"국가코드\", \"입국연월\", \"입국자 수\"]\n",
+        "    result_df = pd.DataFrame(result, columns = columns)\n",
+        "    result_df.to_csv('./%s_%s_%d_%s.csv' % (natName, ed, nStartYear, dataEND),\n",
+        "                index=False, encoding='cp949')"
       ],
       "execution_count": null,
       "outputs": []
