Colaboratory를 통해 생성됨

--- a/PublicDataAPI.ipynb
+++ b/PublicDataAPI.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPotJFh0FMSsBXTdUj7v/9g",
+      "authorship_tag": "ABX9TyOdBMi8VgoBET97q24V+UB2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,18 +125,17 @@
         "                          %(str(year), str(month-1)))                    \n",
         "                    break                \n",
         "                #jsonData를 출력하여 확인......................................................\n",
-        "                print (json.dumps(jsonData, indent=4, \n",
-        "                         sort_keys=True, ensure_ascii=False))          \n",
+        "                print (json.dumps(jsonData, indent=4, sort_keys=True, ensure_ascii=False))          \n",
         "                natName = jsonData['response']['body']['items']['item']['natKorNm']\n",
         "                natName = natName.replace(' ', '')\n",
         "                num = jsonData['response']['body']['items']['item']['num']\n",
         "                ed = jsonData['response']['body']['items']['item']['ed']\n",
         "                print('[ %s_%s : %s ]' %(natName, yyyymm, num))\n",
         "                print('----------------------------------------------------------------------')                \n",
-        "                jsonResult.append({'nat_name': natName, 'nat_cd': nat_cd,\n",
-        "                                 'yyyymm': yyyymm, 'visit_cnt': num})\n",
+        "                jsonResult.append({'nat_name': natName, 'nat_cd': nat_cd, 'yyyymm': yyyymm, 'visit_cnt': num})\n",
         "                result.append([natName, nat_cd, yyyymm, num])\n",
-        "    return (jsonResult, result, natName, ed, dataEND)"
+        "    #return (jsonResult, result, natName, ed, dataEND)\n",
+        "    return (jsonResult, result, natName, ed)"
       ],
       "execution_count": null,
       "outputs": []
@@ -148,27 +147,27 @@
       },
       "source": [
         "jsonResult = []\n",
-        "    result = []\n",
+        "result = []\n",
         "\n",
-        "    print(\"<< 국내 입국한 외국인의 통계 데이터를 수집합니다. >>\")\n",
-        "    nat_cd = input('국가 코드를 입력하세요(중국: 112 / 일본: 130 / 미국: 275) : ')\n",
-        "    nStartYear =int(input('데이터를 몇 년부터 수집할까요? : '))\n",
-        "    nEndYear = int(input('데이터를 몇 년까지 수집할까요? : '))\n",
-        "    ed_cd = \"E\"     #E : 방한외래관광객, D : 해외 출국\n",
+        "print(\"<< 국내 입국한 외국인의 통계 데이터를 수집합니다. >>\")\n",
+        "nat_cd = input('국가 코드를 입력하세요(중국: 112 / 일본: 130 / 미국: 275) : ')\n",
+        "nStartYear =int(input('데이터를 몇 년부터 수집할까요? : '))\n",
+        "nEndYear = int(input('데이터를 몇 년까지 수집할까요? : '))\n",
+        "ed_cd = \"E\"     #E : 방한외래관광객, D : 해외 출국\n",
         "    \n",
-        "    jsonResult, result, natName, ed, dataEND =getTourismStatsService(nat_cd,\n",
-        "                                            ed_cd, nStartYear, nEndYear) #[CODE 3]\n",
-        " \n",
-        "    #파일저장 1 : json 파일       \n",
-        "    with open('./%s_%s_%d_%s.json' % (natName, ed, nStartYear, dataEND), 'w', \n",
-        "                encoding='utf8') as outfile:\n",
+        "#jsonResult, result, natName, ed, dataEND =getTourismStatsService(nat_cd, ed_cd, nStartYear, nEndYear)\n",
+        "jsonResult, result, natName, ed = getTourismStatsService(nat_cd, ed_cd, nStartYear, nEndYear)\n",
+        "\n",
+        "#파일저장 1 : json 파일       \n",
+        "#with open('./%s_%s_%d_%s.json' % (natName, ed, nStartYear, dataEND), 'w', encoding='utf8') as outfile:\n",
+        "with open('./%s_%s_%d_.json' % (natName, ed, nStartYear), 'w', encoding='utf8') as outfile:\n",
         "        jsonFile  = json.dumps(jsonResult, indent=4, sort_keys=True, ensure_ascii=False)\n",
         "        outfile.write(jsonFile)\n",
-        "    #파일저장 2 : csv 파일   \n",
-        "    columns = [\"입국자국가\", \"국가코드\", \"입국연월\", \"입국자 수\"]\n",
-        "    result_df = pd.DataFrame(result, columns = columns)\n",
-        "    result_df.to_csv('./%s_%s_%d_%s.csv' % (natName, ed, nStartYear, dataEND),\n",
-        "                index=False, encoding='cp949')"
+        "\n",
+        "#파일저장 2 : csv 파일   \n",
+        "columns = [\"입국자국가\", \"국가코드\", \"입국연월\", \"입국자 수\"]\n",
+        "result_df = pd.DataFrame(result, columns = columns)\n",
+        "result_df.to_csv('./%s_%s_%d_.csv' % (natName, ed, nStartYear), index=False, encoding='cp949')"
       ],
       "execution_count": null,
       "outputs": []
